Criada interface para sistema de edição de Bancas.

--- a/projetos/templates/projetos/bancas.html
+++ b/projetos/templates/projetos/bancas.html
@@ -96,6 +96,8 @@
   <br>
   <div id='calendar'></div>
 
+  <a href="{% url 'bancas_criar'%}"><h5>Criar agendamento de Banca</h5></a>
+  <a href="{% url 'bancas_buscar'%}"><h5>Editar agendamento de Banca</h5></a>
   <a href="{% url 'bancas_lista' 'todas' %}"><h5>Listar Todas as Bancas</h5></a>
   <a href="{% url 'bancas_lista' 'futuras' %}"><h5>Listar Futuras Bancas</h5></a>
 
