--- a/projetos/templates/projetos/bancas.html
+++ b/projetos/templates/projetos/bancas.html
@@ -87,18 +87,45 @@
     margin: 0 auto;
   }
 </style>
+<style>
+.wrap {
+  display: flex;
+}
 
+.one {
+  width: 30%;
+  border: 1px solid green;
+}
+
+.two {
+  width: 70%;
+  border: 1px solid blue;
+}
+
+@media (max-width: 767px) {
+  .wrap {
+    flex-direction: column-reverse;
+  }
+  .one,
+  .two {
+    width: auto;
+  }
+}
+</style>
 {% endblock %}
 
 {% block content %}
 
   <h3>Bancas</h3>
   <br>
-  <div id='calendar'></div>
-
-  <a href="{% url 'bancas_criar'%}"><h5>Criar agendamento de Banca</h5></a>
-  <a href="{% url 'bancas_buscar'%}"><h5>Editar agendamento de Banca</h5></a>
-  <a href="{% url 'bancas_lista' 'todas' %}"><h5>Listar Todas as Bancas</h5></a>
-  <a href="{% url 'bancas_lista' 'futuras' %}"><h5>Listar Futuras Bancas</h5></a>
+  <div class="wrap">
+      <div class="one">
+          <a href="{% url 'bancas_criar'%}"><h5>Criar agendamento de Banca</h5></a>
+          <a href="{% url 'bancas_buscar'%}"><h5>Editar agendamento de Banca</h5></a>
+          <a href="{% url 'bancas_lista' 'todas' %}"><h5>Listar Todas as Bancas</h5></a>
+          <a href="{% url 'bancas_lista' 'futuras' %}"><h5>Listar Futuras Bancas</h5></a>
+      </div>
+      <div class="two" id='calendar'></div>
+  </div>
 
 {% endblock %}
