Sistema de agendamento de bancas completo.

--- a/projetos/templates/projetos/bancas_criar.html
+++ b/projetos/templates/projetos/bancas_criar.html
@@ -6,37 +6,61 @@
 {% endcomment %}
 
 {% block head %}
+<script>
+  $(document).ready(function () {     
+    $('#projeto').change(function(){
+      var titulo = $(this).children(':selected').data('titulo');
+      var organizacao = $(this).children(':selected').data('organizacao');
+      var orientador = $(this).children(':selected').data('orientador');
+      $('#titulo').text(titulo);
+      $('#organizacao').text(organizacao);
+      $('#orientador').text(orientador);
+    })
+  });
+</script>
 {% endblock %}
 
 {% block content %}
+
   {% if projetos %}
     <form method="post" id="criarbancasform" enctype="multipart/form-data">
       {% csrf_token %}
       Projeto:
-      <select name="projeto" id="projeto" title="Selecione o projeto" required>
+      <select name="projeto" id="projeto" title="Selecione o projeto"
+      style="width:700px;" required>
           <option disabled selected value> -- selecione um projeto -- </option>
           {% for projeto in projetos %}
-            <option value="{{projeto.id}}">
+            <option value="{{projeto.id}}"
+            data-titulo="{{projeto.titulo}}"
+            data-organizacao="{{projeto.empresa}}"
+            data-orientador="{{projeto.orientador}}"
+            >
+              {{projeto.id}} -
               {{projeto.titulo}}
               ({{projeto.empresa}})
               [{{projeto.orientador}}]
             </option>  
           {% endfor %}
-      </select>
-      <br><br>
+      </select><br><br>
+
+      Título: <label id="titulo" name="titulo"></label><br>
+      Organização: <label id="organizacao" name="organizacao"></label><br>
+      Orientador: <label id="orientador" name="orientador"></label><br>
+
+      <br>
       <div >
         Inicio: <input id="inicio" type = "datetime-local" name="inicio">
         &nbsp;&nbsp;&nbsp;&nbsp;
         Fim: <input id="fim" type = "datetime-local" name="fim">
       </div><br>
 
-      Local: <input name="local" type="text" size="50"/><br>
+      Local: <input name="local" type="text" size="48"/><br>
       <br>
 
       Membro 1 da Banca:
-      <select name="membro1" id="membro1" title="Selecione membro da banca" required>
+      <select name="membro1" id="membro1" title="Selecione membro da banca">
           <option disabled selected value> -- selecione um membro da banca -- </option>
-          {% for professor in professores %}
+          {% for professor in pessoas %}
             <option value="{{professor.id}}">
               {{professor}}
             </option>  
@@ -44,9 +68,9 @@
       </select><br>
 
       Membro 2 da Banca:
-      <select name="membro2" id="membro2" title="Selecione membro da banca" required>
+      <select name="membro2" id="membro2" title="Selecione membro da banca">
           <option disabled selected value> -- selecione um membro da banca -- </option>
-          {% for professor in professores %}
+          {% for professor in pessoas %}
             <option value="{{professor.id}}">
               {{professor}}
             </option>  
@@ -54,9 +78,9 @@
       </select><br>
 
       Membro 3 da Banca:
-      <select name="membro3" id="membro3" title="Selecione membro da banca" required>
+      <select name="membro3" id="membro3" title="Selecione membro da banca">
           <option disabled selected value> -- selecione um membro da banca -- </option>
-          {% for professor in professores %}
+          {% for professor in pessoas %}
             <option value="{{professor.id}}">
               {{professor}}
             </option>  
