Obrigatório criar um texto para anotação

--- a/projetos/templates/projetos/cria_anotacao.html
+++ b/projetos/templates/projetos/cria_anotacao.html
@@ -16,7 +16,7 @@
       <br><br>
 
       Anotação:<br>
-      <textarea name="anotacao" rows="5" cols="64"></textarea>
+      <textarea name="anotacao" rows="5" cols="64" required></textarea>
       <br><br>
       <button type="submit">Criar anotação</button>
       <p>&nbsp;</p>
