Suporte a listagem de parceiros e professores.

--- a/projetos/templates/index_admin.html
+++ b/projetos/templates/index_admin.html
@@ -16,6 +16,8 @@
     <a href="{% url 'alunos' %}"><li>Alunos</li></a>
     <a href="{% url 'todos' %}"><li>Projetos</li></a>
     <a href="{% url 'organizacoes' %}"><li>Organizações Parceiras</li></a>
+    <a href="{% url 'todos_parceiros' %}"><li>Parceiros Profissionais</li></a>
+    <a href="{% url 'todos_professores' %}"><li>Professores do PFE</li></a>
 </ul>
 
 <hr>
