--- a/projetos/templates/projetos/todos_parceiros.html
+++ b/projetos/templates/projetos/todos_parceiros.html
@@ -15,25 +15,48 @@
     <table id="ParceirosTable">
       <tr>
         <th onclick="w3.sortHTML('#ParceirosTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Nome</th>
-        <th onclick="w3.sortHTML('#ParceirosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Organização</th>
-        <th onclick="w3.sortHTML('#ParceirosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">e-mail</th>
+        <th onclick="w3.sortHTML('#ParceirosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Cargo</th>
+        <th onclick="w3.sortHTML('#ParceirosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Organização</th>
+        <th onclick="w3.sortHTML('#ParceirosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">e-mail</th>
+        <th onclick="w3.sortHTML('#ParceirosTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">telefone</th>
+        <th class="text-center">papel</th>
       </tr>
       {% for parceiro in pareceiros %} 
         <tr class="item">
-          <td class="text-center">
+          <td>
             {{parceiro.user.first_name}} {{parceiro.user.last_name}} 
           </td>
           <td>
+            {{parceiro.cargo}} 
+          </td>
+          <td class="text-center">
             <a href="{% url 'organizacao' parceiro.organizacao.login %}"> <!-- UM DIA ACERTAR ISSO -->
               {{parceiro.organizacao.sigla}}
             </a>
           </td>
-          <td class="text-center">
-            <a href="mailto:{{parceiro.user.email}}"> &lt;{{parceiro.user.email}}&gt;</a><br>
+          <td>
+            <a href="mailto:{{parceiro.user.email}}"> &lt;{{parceiro.user.email}}&gt;</a>
+          </td>
+          <td>
+            {% if parceiro.telefone %}
+              {{parceiro.telefone}}
+              {% if parceiro.celular %} 
+                &nbsp;/&nbsp;
+                {{parceiro.celular}}
+              {% endif %}
+            {% elif parceiro.celular %}
+              {{parceiro.celular}}
+            {% endif %}
+          </td>
+          <td>
+            {% if parceiro.gestor_responsavel %}GR{% endif %}
+            {% if parceiro.mentor_tecnico %}MT{% endif %}
+            {% if parceiro.recursos_humanos %}RH{% endif %}
           </td>
         </tr>
       {% endfor %}
     </table>
+    <small>GR: Gestor Responsável / MT: Mentor Técnico / RH: Recursos Humanos</small>
   {% else %}
     <p>Não existem parceiros cadastradas.</p>
   {% endif %}
