--- a/users/templates/users/alunos.html
+++ b/users/templates/users/alunos.html
@@ -34,31 +34,47 @@
           </tr>
           {% for aluno in alunos_list %} 
           <tr class="item">
-              <td><a href="{% url 'aluno' aluno.id %}" data-toggle="tooltip" data-html="true" animation="true" title="
-                {% for opcao in aluno.opcao_set.all %}
-                  <b>#{{opcao.prioridade}}:</b>
-                    {% if aluno.alocado == opcao.projeto %}
-                      <u>
-                    {% endif %}
-                  {% if opcao.projeto.titulo_final %}
-                    {{opcao.projeto.titulo_final}}
-                  {% else %}
-                    {{opcao.projeto.titulo}}
+            <td><a href="{% url 'aluno' aluno.id %}" data-toggle="tooltip" data-html="true" animation="true" title="
+              {% for opcao in aluno.opcao_set.all %}
+                <b>#{{opcao.prioridade}}:</b>
+                  {% if aluno.alocado == opcao.projeto %}
+                    <u>
                   {% endif %}
-                  ({{opcao.projeto.empresa.nome_empresa}})
-                    {% if aluno.alocado == opcao.projeto %}
-                      </u>
-                    {% endif %}
-                  <br>
-                {% endfor %}
-              ">
-                {{aluno.user.first_name}}&nbsp;{{aluno.user.last_name}}
-              </a></td>
+                {% if opcao.projeto.titulo_final %}
+                  {{opcao.projeto.titulo_final}}
+                {% else %}
+                  {{opcao.projeto.titulo}}
+                {% endif %}
+                ({{opcao.projeto.empresa.nome_empresa}})
+                  {% if aluno.alocado == opcao.projeto %}
+                    </u>
+                  {% endif %}
+                <br>
+              {% endfor %}
+            ">
+              {{aluno.user.first_name}}&nbsp;{{aluno.user.last_name}}
+            </a></td>
+            {% if aluno.curso %}
               <td class="{% if aluno.curso == 'C' %}text-success{% elif aluno.curso == 'M' %}text-danger{% else %}text-warning{% endif %}">
-                  {{ aluno.get_curso_display }}
-                </td>
+                {{ aluno.get_curso_display }}
+              </td>
+            {% else %}
+              <td>Indefinido</td>
+            {% endif %}
             <td class="{% if configuracao.ano == aluno.anoPFE and configuracao.semestre == aluno.semestrePFE %}text-success{% endif %}">
-              {{aluno.anoPFE}}.{{aluno.semestrePFE}}
+              {% if aluno.alocacao_set.all %}
+                {% for alocacao in aluno.alocacao_set.all %}
+                  <a href="{% url 'completo' alocacao.projeto.id %}">
+                    {{alocacao.projeto.ano}}.{{alocacao.projeto.semestre}}
+                  </a>
+                {% endfor %}
+              {% else %}
+                {% if aluno.anoPFE and aluno.semestrePFE %}
+                  {{aluno.anoPFE}}.{{aluno.semestrePFE}}
+                {% else %}
+                  Indefinido
+                {% endif %}
+              {% endif %}
             </td>
             <td>
               <a href="mailto:{{aluno.user.email}}"> &lt;{{aluno.user.email}}&gt;</a><br>
