Controle de parceiros não mais ativos.

--- a/projetos/templates/projetos/organizacao_completo.html
+++ b/projetos/templates/projetos/organizacao_completo.html
@@ -16,25 +16,29 @@
   {% endif %}
   <br><strong>contato(s):</strong><br>
   {% for parceiro in organization.parceiro_set.all %}
-      <li>
-          {{parceiro.user.first_name}} {{parceiro.user.last_name}} &nbsp;
-          <a href="mailto:{{parceiro.user.email}}"> &lt;{{parceiro.user.email}}&gt;</a> &nbsp;
-          <br>&nbsp;&nbsp;&nbsp;
-          {% if parceiro.gestor_responsavel %}
-            [gestor responsavel]
-          {% endif %}
-          {% if parceiro.mentor_tecnico %}
-            [mentor técnico]
-          {% endif %}
-          {% if parceiro.recursos_humanos %}
-            [recursos humanos]
-          {% endif %}
-          {% if parceiro.telefone %} <br>&nbsp;&nbsp;&nbsp;&nbsp;&#x260F; {{parceiro.telefone}} &nbsp;{% endif %}
-          {% if parceiro.celular %} <br>&nbsp;&nbsp;&nbsp;&nbsp;&#x1F4F1; {{parceiro.celular}} &nbsp;{% endif %}
-          {% if parceiro.skype %} <br>&nbsp;&nbsp;&nbsp;&nbsp;<img src="{% static 'images/skype.png' %}" alt="skype" style="width:16px;height:16px;">
-          <a href="skype:{{parceiro.skype}}">{{parceiro.skype}}</a>&nbsp; {% endif %}
-          <br>
-        </li>
+    <li {% if not parceiro.user.is_active %} style="color: lightgrey;" {% endif %}>
+      {{parceiro.user.first_name}} {{parceiro.user.last_name}} &nbsp;
+      <a href="mailto:{{parceiro.user.email}}"
+       {% if not parceiro.user.is_active %} style="color: lightgrey;" {% endif %}>
+        &lt;{{parceiro.user.email}}&gt;
+      </a>
+      &nbsp;
+      <br>&nbsp;&nbsp;&nbsp;
+      {% if parceiro.gestor_responsavel %}
+        [gestor responsavel]
+      {% endif %}
+      {% if parceiro.mentor_tecnico %}
+        [mentor técnico]
+      {% endif %}
+      {% if parceiro.recursos_humanos %}
+        [recursos humanos]
+      {% endif %}
+      {% if parceiro.telefone %} <br>&nbsp;&nbsp;&nbsp;&nbsp;&#x260F; {{parceiro.telefone}} &nbsp;{% endif %}
+      {% if parceiro.celular %} <br>&nbsp;&nbsp;&nbsp;&nbsp;&#x1F4F1; {{parceiro.celular}} &nbsp;{% endif %}
+      {% if parceiro.skype %} <br>&nbsp;&nbsp;&nbsp;&nbsp;<img src="{% static 'images/skype.png' %}" alt="skype" style="width:16px;height:16px;">
+      <a href="skype:{{parceiro.skype}}">{{parceiro.skype}}</a>&nbsp; {% endif %}
+      <br>
+    </li>
   {% endfor %}
   <br><strong>endereço(s):</strong> 
   <a href="http://maps.google.com/maps?q={{organization.endereco}}">
