--- a/projetos/templates/projetos/selecao_projetos.html
+++ b/projetos/templates/projetos/selecao_projetos.html
@@ -44,7 +44,7 @@
               </script>
             </td>
           <td>
-            <a href="{% url 'projeto' projeto.pk %}">
+            <a href="{% url 'projeto_detalhe' projeto.pk %}">
               {% if projeto.titulo_final %}
                 {{projeto.titulo_final}}<br>
                 <small>Título Provisório: {{projeto.titulo}}</small>
