--- a/projetos/templates/projetos/tabela_documentos.html
+++ b/projetos/templates/projetos/tabela_documentos.html
@@ -51,7 +51,7 @@
               {{projeto.ano}}.{{projeto.semestre}}
           </td>
           <td>
-            <a href="{% url 'organizacao' projeto.empresa.login %}">
+            <a href="{% url 'organizacao_completo' projeto.empresa.login %}">
               {{ projeto.empresa.nome_empresa }}
             </a>
           </td>
