--- a/projetos/templates/index_professor.html
+++ b/projetos/templates/index_professor.html
@@ -7,14 +7,14 @@
 
 {% block content %}
 
-    <a href="{% url 'bancas' %}">            <h5>Calendário das Bancas</h5>                      </a>
+    <a href="{% url 'bancas_index' %}">            <h5>Calendário das Bancas</h5>                      </a>
 
     <a href="{% url 'dinamicas' %}">         <h5>Calendário das Dinâmicas</h5>                   </a>
 
     <hr>
 
 
-    <a href="{% url 'fechados' %}">          <h5>Listagem Detalhada de Projetos Fechados</h5>    </a>
+    <a href="{% url 'projetos_fechados' %}">          <h5>Listagem Detalhada de Projetos Fechados</h5>    </a>
 
     <h5>Listagem de Projetos Publicados</h5>
     <ul>
