--- a/projetos/templates/projetos/todos_parceiros.html
+++ b/projetos/templates/projetos/todos_parceiros.html
@@ -30,7 +30,7 @@
             {{parceiro.cargo}} 
           </td>
           <td class="text-center">
-            <a href="{% url 'organizacao' parceiro.organizacao.login %}"
+            <a href="{% url 'organizacao_completo' parceiro.organizacao.login %}"
             {% if not parceiro.user.is_active %} style="color: lightgrey;" {% endif %}> <!-- UM DIA ACERTAR ISSO -->
               {{parceiro.organizacao.sigla}}
             </a>
