--- a/projetos/templates/index_documentos.html
+++ b/projetos/templates/index_documentos.html
@@ -6,11 +6,42 @@
 {% endcomment %}
 
 {% block content %}
-    <a href="../..{{MEDIA_URL}}{{regulamento.documento}}"><h5>Regulamento do PFE</h5></a>
-    <a href="../..{{MEDIA_URL}}{{plano_de_aprendizagem.documento}}"><h5>Plano de Aprendizagem</h5></a>
+
+    <h5>Área Geral</h5>
+    {% if regulamento %}
+        <a href="../..{{MEDIA_URL}}{{regulamento.documento}}"><h5>Regulamento do PFE</h5></a>
+    {% endif %}
+    {% if plano_de_aprendizagem %}
+        <a href="../..{{MEDIA_URL}}{{plano_de_aprendizagem.documento}}"><h5>Plano de Aprendizagem</h5></a>
+    {% endif %}
+
     <hr>
-    <a href="../..{{MEDIA_URL}}{{manual_aluno.documento}}"><h5>Manual do Alunos</h5></a>
-    <a href="../..{{MEDIA_URL}}{{manual_planejamento.documento}}"><h5>Manual para Confecção de Relatórios de Planejamento</h5></a>
-    <a href="../..{{MEDIA_URL}}{{manual_relatorio.documento}}"><h5>Manual para Confecção de Relatórios</h5></a>
-    <hr>
+    <h5>Área do Aluno</h5> <!-- Aluno -->
+    {% if manual_aluno %}
+        <a href="../..{{MEDIA_URL}}{{manual_aluno.documento}}"><h5>Manual do Alunos</h5></a>
+    {% endif %}
+    {% if manual_planejamento %}
+        <a href="../..{{MEDIA_URL}}{{manual_planejamento.documento}}"><h5>Manual para Confecção de Relatórios de Planejamento</h5></a>
+    {% endif %}
+    {% if manual_relatorio %}
+        <a href="../..{{MEDIA_URL}}{{manual_relatorio.documento}}"><h5>Manual para Confecção de Relatórios</h5></a>
+    {% endif %}
+
+    {% if user.tipo_de_usuario == 3 or user.tipo_de_usuario == 2 %} <!-- Parceiro ou Professor-->
+        <hr>
+        <h5>Área dos Parceiros</h5>
+        {% if termo_parceria %}
+            <a href="../..{{MEDIA_URL}}{{termo_parceria.documento}}"><h5>Termo de Parceria</h5></a>
+        {% endif %}
+    {% endif %}
+
+    {% if user.tipo_de_usuario == 2 %} <!-- Professor -->
+        <hr>
+        <h5>Área do Professor</h5>
+        <a href="{% url 'tabela_documentos' %}"><h5>Tabelas de Documentação dos Projetos Fechados</h5></a>
+        {% if exemplo %}
+            <!-- <a href="../..{{MEDIA_URL}}{{exemplo.documento}}"><h5>Exemplo documento</h5></a> -->
+        {% endif %}
+    {% endif %}
+
 {% endblock %}
