--- a/projetos/templates/index_admin.html
+++ b/projetos/templates/index_admin.html
@@ -13,7 +13,7 @@
 <hr>
 <h5>Listagem completa</h5>
 <ul>
-    <a href="{% url 'alunos' %}"><li>Alunos</li></a>
+    <a href="{% url 'alunos_lista' %}"><li>Alunos</li></a>
     <a href="{% url 'todos' %}"><li>Projetos</li></a>
     <a href="{% url 'organizacoes_lista' %}"><li>Organizações Parceiras</li></a>
     <a href="{% url 'todos_parceiros' %}"><li>Parceiros Profissionais</li></a>
