--- a/users/templates/users/alunos_lista.html
+++ b/users/templates/users/alunos_lista.html
@@ -34,7 +34,7 @@
           </tr>
           {% for aluno in alunos_list %} 
           <tr class="item">
-            <td><a href="{% url 'aluno' aluno.id %}" data-toggle="tooltip" data-html="true" animation="true" title="
+            <td><a href="{% url 'aluno_detail' aluno.id %}" data-toggle="tooltip" data-html="true" animation="true" title="
               {% for opcao in aluno.opcao_set.all %}
                 <b>#{{opcao.prioridade}}:</b>
                   {% if aluno.alocado == opcao.projeto %}
