--- a/users/templates/users/alunos_lista.html
+++ b/users/templates/users/alunos_lista.html
@@ -6,17 +6,14 @@
 {% endcomment %}
 
 {% block head %}
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  {% load static %}
   <script src="https://www.w3schools.com/lib/w3.js"></script>
-
+  <script src="{% static 'js/Chart.min.js' %}"></script>
   <script>
     $(document).ready(function(){
-        $('[data-toggle="tooltip"]').tooltip();
+      $('[data-toggle="tooltip"]').tooltip();
     });
   </script>
-
-  {% load static %}
-  <script src="{% static 'js/Chart.min.js' %}"></script>
 {% endblock %}
 
 {% block content %}
@@ -34,26 +31,32 @@
           </tr>
           {% for aluno in alunos_list %} 
           <tr class="item">
-            <td><a href="{% url 'aluno_detail' aluno.id %}" data-toggle="tooltip" data-html="true" animation="true" title="
-              {% for opcao in aluno.opcao_set.all %}
-                <b>#{{opcao.prioridade}}:</b>
-                  {% if aluno.alocado == opcao.projeto %}
-                    <u>
-                  {% endif %}
-                {% if opcao.projeto.titulo_final %}
-                  {{opcao.projeto.titulo_final}}
-                {% else %}
-                  {{opcao.projeto.titulo}}
+            <td>
+              <a href="{% url 'aluno_detail' aluno.id %}" 
+                {% if aluno.opcao_set.all %}
+                  data-toggle="tooltip" data-html="true" animation="true" title="
+                  {% for opcao in aluno.opcao_set.all %}
+                    <b>#{{opcao.prioridade}}:</b>
+                      {% if opcao.projeto == aluno.alocacao_set.last.projeto %}
+                        <u>
+                      {% endif %}
+                    {% if opcao.projeto.titulo_final %}
+                      {{opcao.projeto.titulo_final}}
+                    {% else %}
+                      {{opcao.projeto.titulo}}
+                    {% endif %}
+                    ({{opcao.projeto.empresa.nome_empresa}})
+                      {% if opcao.projeto == aluno.alocacao_set.last.projeto %}
+                        </u>
+                      {% endif %}
+                    <br>
+                  {% endfor %}
+                  "
                 {% endif %}
-                ({{opcao.projeto.empresa.nome_empresa}})
-                  {% if aluno.alocado == opcao.projeto %}
-                    </u>
-                  {% endif %}
-                <br>
-              {% endfor %}
-            ">
-              {{aluno.user.first_name}}&nbsp;{{aluno.user.last_name}}
-            </a></td>
+              >
+                {{aluno.user.first_name}}&nbsp;{{aluno.user.last_name}}
+              </a>
+            </td>
             {% if aluno.curso %}
               <td class="{% if aluno.curso == 'C' %}text-success{% elif aluno.curso == 'M' %}text-danger{% else %}text-warning{% endif %}">
                 {{ aluno.get_curso_display }}
