Com sistema para resetar senha.

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,5 +8,8 @@
   {{ form.as_p }}
   <button type="submit">Login</button>
 </form>
+<br>
+<p><a href="{% url 'password_reset' %}">Recriar senha.</a></p>
+
 
 {% endblock %}
