--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,29 +1,41 @@
 {% extends "base.html" %}
 
+{% block head %}
+    <style type="text/css">
+        table, td, th
+        {
+            border-collapse:collapse;
+            border: 0;
+        }
+    </style>
+{% endblock %}
+
 {% block content %}
     {% if validlink %}
-        <p>Please enter (and confirm) your new password.</p>
+        <p>Digite uma nova senha e confirme.</p><br>
         <form action="" method="post">
         {% csrf_token %}
             <table>
                 <tr>
                     <td>{{ form.new_password1.errors }}
-                        <label for="id_new_password1">New password:</label></td>
+                        <label for="id_new_password1">Nova senha:</label></td>
                     <td>{{ form.new_password1 }}</td>
                 </tr>
                 <tr>
                     <td>{{ form.new_password2.errors }}
-                        <label for="id_new_password2">Confirm password:</label></td>
+                        <label for="id_new_password2">Confirme senha:</label></td>
                     <td>{{ form.new_password2 }}</td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><input type="submit" value="Change my password" /></td>
+                    <td>
+                        <input type="submit" value="atualizar senha" />
+                    </td>
                 </tr>
             </table>
         </form>
     {% else %}
-        <h1>Password reset failed</h1>
-        <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+        <h1>Atualização da senha falhou</h1>
+        <p>O link de redefinição de senha era inválido, possivelmente porque já foi usado. Solicite uma nova redefinição de senha.</p>
     {% endif %}
 {% endblock %}
