--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,2 +1,5 @@
-Someone asked for password reset for email {{ email }}. Follow the link below:
-{{ protocol}}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+Caro usuário do PFE,
+
+    Para atualizar sua conta do PFE. Clique no link a seguir:
+
+    {{ protocol}}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
