--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
+  <h4>Informe seu e-mail para recriar uma senha para você</h4>
   <form action="" method="post">
-  {% csrf_token %}
-  {% if form.email.errors %}
-    {{ form.email.errors }}
-  {% endif %}
-      <p>{{ form.email }}</p> 
-    <input type="submit" class="btn btn-default btn-lg" value="Reset password">
+    {% csrf_token %}
+    {% if form.email.errors %}
+      {{ form.email.errors }}
+    {% endif %}
+    <p>{{ form.email }}</p> 
+    <!-- <input type="submit" class="btn btn-default btn-lg" value="Reset password"> -->
+    <button type="submit" value="Reset password">Recriar Senha</button>
   </form>
 {% endblock %}
